# pycoati

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  WEIGHTS.md  pyproject.toml  release.toml
.claude/skills/rust-review/: SKILL.md
.github/workflows/: codeql.yml  release.yml  review.yml
docs/plans/: coati-bootstrap.md  pycoati-bootstrap.md  zorilla-integration.md
src/: coverage.rs  lib.rs  main.rs  mock_api.rs  parser.rs  pretty.rs  pyproject.rs  pytest.rs  python_detect.rs  smells.rs  suspicion.rs  sut_calls.rs  walker.rs  workspace.rs
tests/: cli.rs  end_to_end.rs  inventory_shape.rs  parse_assertions.rs  pytest_integration.rs  scoring.rs  stubs.rs
tests/fixtures/hyphen_project/: pyproject.toml
tests/fixtures/hyphen_project/my_pkg/: __init__.py
tests/fixtures/hyphen_project/tests/: test_greet.py
tests/fixtures/project/: pyproject.toml
tests/fixtures/project/myproj/: __init__.py  repository.py
tests/fixtures/project/tests/: helpers.py  other_test.py  test_mixed.py  test_mock_only.py  test_no_asserts.py  test_overmocked.py  test_real.py  test_uses_repo.py
tests/fixtures/simple/: empty.py  test_basic.py
tests/fixtures/stubs_style/: test_stubs.py
tests/fixtures/unittest_style/: test_unittest.py
tests/fixtures/uv_workspace/: pyproject.toml
tests/fixtures/uv_workspace_partial/: pyproject.toml
