[package]
name = "pycoati"
version = "0.1.0"
edition = "2021"
description = "Audit Python test suites for mock smells and suspicious tests"
license = "MIT"
repository = "https://github.com/mojzis/pycoati"
authors = ["mojzis <mojzisek@gmail.com>"]
keywords = []
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
ignore = "0.4"
toml = "1.1"
tempfile = "3.26"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"

[lib]
name = "pycoati"
path = "src/lib.rs"

[[bin]]
name = "pycoati"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Cherry-picked restriction lints
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
undocumented_unsafe_blocks = "warn"
clone_on_ref_ptr = "warn"
exit = "warn"
await_holding_lock = "warn"
large_futures = "warn"

# Pedantic allows (too noisy)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"
implicit_hasher = "allow"

# Nursery allows (unstable/buggy lints)
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"
future_not_send = "allow"
