[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "coati"
description = "A new tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mojzis", email = "mojzisek@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["rust"]
dynamic = ["version"]
dependencies = []

[project.urls]
homepage = "https://github.com/mojzis/coati"
repository = "https://github.com/mojzis/coati"
documentation = "https://github.com/mojzis/coati#readme"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[tool.maturin]
bindings = "bin"
strip = true
